# horizon-v2-mono

./: .gitignore  AutoRoster.md  CLAUDE.md  CREW_SCHEDULE_TEST_PLAN.xlsx  DESIGN_CONTRACT.md  GANTT-PHASES-REMAINING.md  MOBILE GRAFSCHE.md  Mobile Gantt.md  PAIRING_MASTER_PLAN.MD  gantt-implementation-plan.md  infrastructure-hardening-plan.md  package-lock.json  package.json  production-readiness-plan.md  render.yaml  right-click.md  seed-crew.mjs  skyhub-intelligent-canvas-roadmap.md  sprint-3-component-library.md  sprint-4-auth.md  sprint-5-6-data-layer-nav-shell.md  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.claude/agents/: build-error-resolver.md  code-reviewer.md  planner.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
docs/: CONTRIBUTING.md  disruption-management-followups.md  messaging-architecture-plan.md
scripts/: free-solver-port.mjs  gen-crew-schedule-test-plan.js  read-test-plan.js
server/: .env.example  package-lock.json  package.json  seed-ahm732.mjs  seed-block-hours-all.mjs  seed-block-hours.mjs  seed-delay-codes.mjs  seed-performance.mjs  seed-regs.mjs  seed-slot-airports.mjs  seed-slot-all-airports.mjs  seed-slot-data.mjs  seed-slots-from-schedule.mjs
services/auto-roster-solver/: pyproject.toml
services/auto-roster-solver/app/: main.py  models.py
services/auto-roster-solver/app/solver/: cp_sat_engine.py
services/recovery-solver/: Dockerfile  pyproject.toml
services/recovery-solver/app/: main.py  models.py
services/recovery-solver/app/solver/: cg_engine.py  flight_graph.py  objectives.py  pricing.py
(+1523 files in other folders)
