[project]
name = "auto-roster-solver"
version = "0.1.0"
description = "CP-SAT crew auto-roster solver for SkyHub 4.1.6.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "sse-starlette>=2.1.0",
    "ortools>=9.10.0",
]

[project.optional-dependencies]
dev = ["httpx", "pytest"]
