[project]
name = "recovery-solver"
version = "0.1.0"
description = "Column Generation solver for airline disruption recovery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pulp>=2.8.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = ["httpx", "pytest"]
